Проект докеризован